; ModuleID = '/home/carl/AnghaBench/kphp-kdb/hints/extr_hints-data.c_user_object_rating_increment.c'
source_filename = "/home/carl/AnghaBench/kphp-kdb/hints/extr_hints-data.c_user_object_rating_increment.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.TYPE_3__ = type { i32, i32 }

@write_only = common dso_local global i64 0, align 8
@no_changes = common dso_local global i64 0, align 8
@changes_count = common dso_local global i32 0, align 4

; Function Attrs: noinline nounwind optnone uwtable
define dso_local i32 @user_object_rating_increment(%struct.TYPE_3__* %0, i8 zeroext %1, i64 %2, i32 %3, i32 %4) #0 {
  %6 = alloca i32, align 4
  %7 = alloca %struct.TYPE_3__*, align 8
  %8 = alloca i8, align 1
  %9 = alloca i64, align 8
  %10 = alloca i32, align 4
  %11 = alloca i32, align 4
  store %struct.TYPE_3__* %0, %struct.TYPE_3__** %7, align 8
  store i8 %1, i8* %8, align 1
  store i64 %2, i64* %9, align 8
  store i32 %3, i32* %10, align 4
  store i32 %4, i32* %11, align 4
  %12 = load i32, i32* %10, align 4
  %13 = call i32 @check_rating(i32 %12)
  %14 = icmp ne i32 %13, 0
  br i1 %14, label %15, label %27

15:                                               ; preds = %5
  %16 = load i8, i8* %8, align 1
  %17 = zext i8 %16 to i32
  %18 = icmp eq i32 %17, 0
  br i1 %18, label %27, label %19

19:                                               ; preds = %15
  %20 = load i64, i64* %9, align 8
  %21 = call i32 @check_object_id(i64 %20)
  %22 = icmp ne i32 %21, 0
  br i1 %22, label %23, label %27

23:                                               ; preds = %19
  %24 = load i32, i32* %11, align 4
  %25 = call i32 @check_rating_num(i32 %24)
  %26 = icmp ne i32 %25, 0
  br i1 %26, label %28, label %27

27:                                               ; preds = %23, %19, %15, %5
  store i32 0, i32* %6, align 4
  br label %53

28:                                               ; preds = %23
  %29 = load i64, i64* @write_only, align 8
  %30 = icmp ne i64 %29, 0
  br i1 %30, label %34, label %31

31:                                               ; preds = %28
  %32 = load i64, i64* @no_changes, align 8
  %33 = icmp ne i64 %32, 0
  br i1 %33, label %34, label %35

34:                                               ; preds = %31, %28
  store i32 1, i32* %6, align 4
  br label %53

35:                                               ; preds = %31
  %36 = load %struct.TYPE_3__*, %struct.TYPE_3__** %7, align 8
  %37 = getelementptr inbounds %struct.TYPE_3__, %struct.TYPE_3__* %36, i32 0, i32 1
  %38 = load %struct.TYPE_3__*, %struct.TYPE_3__** %7, align 8
  %39 = getelementptr inbounds %struct.TYPE_3__, %struct.TYPE_3__* %38, i32 0, i32 0
  %40 = load i8, i8* %8, align 1
  %41 = zext i8 %40 to i32
  %42 = load i32, i32* %11, align 4
  %43 = mul nsw i32 256, %42
  %44 = add nsw i32 %41, %43
  %45 = trunc i32 %44 to i8
  %46 = load i64, i64* %9, align 8
  %47 = trunc i64 %46 to i32
  %48 = sub nsw i32 0, %47
  %49 = load i32, i32* %10, align 4
  %50 = call i32 @chg_list_add_int(i32* %37, i32* %39, i8 zeroext %45, i32 %48, i32 %49)
  %51 = load i32, i32* @changes_count, align 4
  %52 = add nsw i32 %51, 1
  store i32 %52, i32* @changes_count, align 4
  store i32 1, i32* %6, align 4
  br label %53

53:                                               ; preds = %35, %34, %27
  %54 = load i32, i32* %6, align 4
  ret i32 %54
}

declare dso_local i32 @check_rating(i32) #1

declare dso_local i32 @check_object_id(i64) #1

declare dso_local i32 @check_rating_num(i32) #1

declare dso_local i32 @chg_list_add_int(i32*, i32*, i8 zeroext, i32, i32) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
